[gd_scene load_steps=7 format=3 uid="uid://dax8y706w5v4"]

[ext_resource type="Script" path="res://src/GameOverScreen.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cb85epyygo0yg" path="res://assets/Fredoka-Bold.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://cbc2y2yptah02" path="res://assets/button.png" id="3"]
[ext_resource type="Texture2D" uid="uid://da2fb5s0o5b2x" path="res://assets/button_pressed.png" id="4"]

[sub_resource type="StyleBoxTexture" id="1"]
texture = ExtResource("3")

[sub_resource type="StyleBoxTexture" id="2"]
texture = ExtResource("4")

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0085, 1.00171)
color = Color(0.133333, 0.0392157, 0.329412, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 175.0
offset_top = 100.0
offset_right = -175.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="GameOverLabel" type="RichTextLabel" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2")
bbcode_enabled = true
text = "[font_size=120][color=#FEC15D]GAME[/color][/font_size]
[font_size=120][color=#FFFFF3]OVER[/color][/font_size]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="RichTextLabel" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[font_size=60][color=#FEC15D]Final Score:[/color] [color=#FFFFF3]0[/color]
[/font_size]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RestartButton" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("1")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/normal = SubResource("1")
text = "SELECT LEVEL"

[node name="MainMenuButton" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("1")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/normal = SubResource("1")
text = "MAIN MENU" 